HBASE-26899 [branch-2.4] Run spotless:apply